# git-layer

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: agent.rs  diff_viewer.rs  exclude_file.rs  git.rs  guard.rs  main.rs  matching.rs  patterns.rs  shadow.rs  tree_picker.rs  ui.rs
src/commands/: add.rs  backup.rs  blame_cmd.rs  clean.rs  clear.rs  diff_cmd.rs  doctor.rs  global.rs  guard.rs  log_cmd.rs  ls.rs  mod.rs  on_off.rs  patterns.rs  revert_cmd.rs  rm.rs  scan.rs  snapshot.rs  status.rs  why_cmd.rs
tests/: cli.rs
