[package]
name = "git-layer"
version = "0.1.5"
edition = "2021"
rust-version = "1.77"
description = "Manage .git/info/exclude so your personal AI files stay out of git — without touching .gitignore."
license = "MIT"
repository = "https://github.com/aungsiminhtet/layer"
homepage = "https://github.com/aungsiminhtet/layer"
authors = ["Aung Si Min Htet <aungsiminhtet@outlook.com>"]
keywords = ["git", "gitignore", "ai-context", "exclude", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "layer"
path = "src/main.rs"

[[bin]]
name = "git-layer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
walkdir = "2"
time = { version = "=0.3.36", features = ["formatting", "parsing"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
